MVMT PLP Filter Header sticky issue, old design filter center align issue

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_refinementsRedesigned.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_refinementsRedesigned.scss
@@ -97,6 +97,11 @@
                     width: 100%;
                 }
 
+                &.loaded {
+                    .filter-group-outer {
+                        display: block;
+                    }
+                }
 
                 &-outer {
                     display: block;
@@ -246,6 +251,7 @@
                     height: rem(40);
                     width: rem(190);
                     padding: 0 rem(20);
+                    background: $white;
 
                     &:after {
                         display: none;
