--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/search.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/search.scss
@@ -418,7 +418,7 @@
       &.loaded {
         .filter-group-outer {
           opacity: 1;
-          display: block;
+          display: flex;
           transform: translateY(0);
         }
       }
